# MiniFEM

./: .gitignore  README.md  main.py  plot.py  pyproject.toml
procedures/: __init__.py  mesh_generation.py
utils/: __init__.py  load.py  mesh.py  plot.py  solve.py  utils.py
